--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.junit.platform:junit-platform-gradle-plugin:1.0.1")
+        classpath("org.junit.platform:junit-platform-gradle-plugin:1.1.0-M1")
 
     }
 }
@@ -40,12 +40,12 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
     testCompile('io.projectreactor:reactor-test')
-    testCompile('org.junit.jupiter:junit-jupiter-api:5.0.1')
+    testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0-M1')
     testRuntime(
-            'org.junit.jupiter:junit-jupiter-engine:5.0.1',
-            'org.junit.vintage:junit-vintage-engine:4.12.1',
-            'org.junit.platform:junit-platform-launcher:1.0.1',
-            'org.junit.platform:junit-platform-runner:1.0.1'
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0-M1',
+            'org.junit.vintage:junit-vintage-engine:5.1.0-M1',
+            'org.junit.platform:junit-platform-launcher:1.1.0-M1',
+            'org.junit.platform:junit-platform-runner:1.1.0-M1'
     )
 
 }
